--- a/.github/workflows/go-app-ci.yaml
+++ b/.github/workflows/go-app-ci.yaml
@@ -62,7 +62,7 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/go-app:${{github.run_id}}
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/go-app:${{github.run_id}}
 
   update-newtag-in-helm-chart:
     runs-on: ubuntu-latest
