Update tag in Helm chart

--- a/helm/go-app-chart/values.yaml
+++ b/helm/go-app-chart/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: utibeokon/go-app
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.07"
+  tag: "10263552670"
 
 ingress:
   enabled: false
